chore: update package.json with new scripts and dependencies
- Added new scripts: seed, seed:multi, and test-db for database operations.
- Updated dependencies:
  - Added @auth/mongodb-adapter, @types/bcryptjs, bcryptjs, mongodb, and next-auth.
  - Added dotenv for environment variable management.
  - Added tsx for TypeScript execution.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "seed": "tsx scripts/seed.ts",
+    "seed:multi": "tsx scripts/seed-multitenant.ts",
+    "test-db": "tsx scripts/test-db.ts"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.11.1",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.3",
+    "mongodb": "^6.3.0",
     "next": "16.0.3",
+    "next-auth": "^5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -18,9 +26,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5"
   }
 }
